# iino_yogatest

./: .gitignore  404.html  AZURE_SETUP.md  DEPLOYMENT.md  README.md  WORKFLOW_SETUP.md  admin.html  azure-pipelines.yml  azure.yaml  deploy-manual.sh  index.html  manifest.json  package-lock.json  package.json  requirements.txt  script.js  setup-azure-swa.ps1  staticwebapp.config.json  styles.css  sw.js
.github/workflows/: azure-static-web-apps-blue-forest-0300b3c00.yml  azure-static-web-apps-lively-water-000d5a100.yml  azure-static-web-apps.yml  build-only.yml  main_iinoyogatest.yml
api/: README.md  function_app.py  host.json  local.settings.json  pyproject.toml  requirements.txt  reservation_manager.py  storage_manager.py
infra/: main.bicep  main.parameters.json
src/: admin.html  index.html  sw.js
