[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "yoga-reservation-api"
version = "1.0.0"
description = "Yoga Lesson Reservation API using Azure Functions"
dependencies = [
    "azure-functions>=1.18.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2"
]
